DEV-04 | Stash reapplyed
We learneda about working with filtering operators and more

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Ultimate RxJS</h1>
     </div>
 
-    <script src="./index.ts"></script>
+    <script src="./filteringOperators.ts"></script>
 </body>
 
 
