--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
     </header>
     <div id="app">
         <h1>Ultimate RxJS</h1>
+        <!-- <input id="text-input"> -->
     </div>
 
-    <script src="./filteringOperators.ts"></script>
+        <script src="./sampleTime.ts"></script>
+    <!-- <script src="./scrollbar.ts"></script> -->
+    <!-- <script src="./debounceTime.ts"></script> -->
+    <!-- <script src="./throttleTime.ts"></script> -->
 </body>
 
 
