--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     </header>
     <div id="app">
         <h1>Ultimate RxJS</h1>
+        <input id="text-input" type="text">
     </div>
 
-    <script src="./filteringOperators.ts"></script>
+    <!-- <script src="./filteringOperators.ts"></script> -->
+    <!-- <script src="./mergeMap.ts"></script> -->
+    <script src="./switchMap.ts"></script>
 </body>
 
 
